Update java and dependencies version