@@ -6,7 +6,8 @@ import io.appium.java_client.ios.IOSDriver;
 import io.qameta.allure.Step;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class MobileFactory {
 
@@ -21,9 +22,9 @@ public class MobileFactory {
     @Step("Инициализация драйвера для платформы Android")
     public static AndroidDriver getAndroidDriver() {
         try {
-            var url = new URL("http://127.0.0.1:4723/");
+            var url = new URI("http://127.0.0.1:4723/").toURL();
             return new AndroidDriver(url, MobileCapabilities.getAndroidCapabilities());
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
@@ -31,9 +32,9 @@ public class MobileFactory {
     @Step("Инициализация драйвера для платформы iOS")
     public static IOSDriver getIosDriver() {
         try {
-            var url = new URL("http://127.0.0.1:4723/");
+            var url = new URI("http://127.0.0.1:4723/").toURL();
             return new IOSDriver(url, MobileCapabilities.getIosCapabilities());
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
